Avances hasta árboles de regresión pt2

--- a/Documentos Extra/Arboles.tex
+++ b/Documentos Extra/Arboles.tex
@@ -74,7 +74,14 @@ Una partición $(j,s)$ que particione el espacio en las dos regiones $R_{m_1},R_
 \begin{equation}
 \sum_{i/\mathbf{x}_i\in R_{m_1} } (y_i-\hat{c}_{m_1})^2+\sum_{i/\mathbf{x}_i\in R_{m_2} } (y_i-\hat{c}_{m_2})^2
 \end{equation}
+\end{column}
+\end{columns}
+\end{frame}
 
+\begin{frame}{Métodos supervisados}
+\begin{columns}
+\begin{column}{0.9\textwidth}
+ 
 \end{column}
 \end{columns}
 \end{frame}
