--- a/Documentos Extra/Introducción.tex
+++ b/Documentos Extra/Introducción.tex
@@ -13,14 +13,14 @@ Los métodos multivariantes son el conjunto de técnicas que buscan describir y 
 \begin{frame}{Introducción}
 \begin{columns}
 \begin{column}{0.9\textwidth}
-Los métodos multivariantes pueden clasificarse de la siguiente manera según el caso de estudio:\pause
+Los métodos multivariantes pueden clasificarse de la siguiente manera según el caso de estudio:
 \begin{itemize}
-\item \textbf{Métodos supervisados:} estudian la relación estocástica que hay entre dos conjuntos de variables, un conjunto de variables predictoras y otro de variables respuesta. \pause
+\item \textbf{Métodos supervisados:} estudian la relación estocástica que hay entre dos conjuntos de variables, un conjunto de variables predictoras y otro de variables respuesta. 
 \begin{itemize}
-\item \textit{Regresión:} la o las  variables variables respuesta son continuas. \pause
-\item \textit{Clasificación: }la o las variables respuesta son cualitativas. \pause
+\item \textit{Regresión:} la o las  variables variables respuesta son continuas. 
+\item \textit{Clasificación: }la o las variables respuesta son cualitativas. 
 \end{itemize}
-\item \textbf{Métodos no supervisados: }analizan la estructura y relaciones que hay entre las variables. \pause
+\item \textbf{Métodos no supervisados: }analizan la estructura y relaciones que hay entre las variables.
 \end{itemize}
 \end{column}
 \end{columns}
