--- a/Documentos Extra/Introducción.tex
+++ b/Documentos Extra/Introducción.tex
@@ -3,7 +3,7 @@
 \begin{columns}
 \begin{column}{0.9\textwidth}
 \begin{defi}
-Los métodos multivariantes son el conjunto de técnicas que buscan describir y extraer información de las relaciones entre variables medidas en una o varias muestras u observaciones. 
+Los métodos multivariantes son el conjunto de técnicas que buscan describir y extraer información de las relaciones entre múltiples variables medidas en una o varias muestras u observaciones. 
 \end{defi}
 \end{column}
 \end{columns}
